--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Portal de e-commerce para venda de coleções de peças de vestuário feminino feitas sob medida para as clientes do site.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "postinstall": "gulp deploy",
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,98 @@
   "bugs": {
     "url": "https://github.com/ericcastoldi/safie/issues"
   },
-  "homepage": "https://github.com/ericcastoldi/safie"
+  "homepage": "https://github.com/ericcastoldi/safie",
+  "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "browserify": "^13.0.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "del": "^2.2.0",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-jsx-coverage": "^0.3.8",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-run": "^1.6.12",
+    "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.3",
+    "jsdom": "^8.4.0",
+    "livereactload": "^2.2.4",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mock-require": "^1.2.1",
+    "react-addons-test-utils": "^15.0.1",
+    "react-proxy": "^1.1.8",
+    "reactify": "^1.1.1",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+    "axios": "^0.11.1",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.6.0",
+    "redux": "^3.5.2",
+    "redux-devtools": "^3.2.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "browserify": "^13.0.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "del": "^2.2.0",
+    "envify": "^3.4.1",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-jsx-coverage": "^0.3.8",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-run": "^1.6.12",
+    "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.3",
+    "jsdom": "^8.4.0",
+    "livereactload": "^2.2.4",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mock-require": "^1.2.1",
+    "react-addons-test-utils": "^15.0.1",
+    "react-proxy": "^1.1.8",
+    "reactify": "^1.1.1",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+  }
 }
