--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "axios": "^0.11.1",
-    "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
@@ -67,10 +66,7 @@
     "redux": "^3.5.2",
     "redux-devtools": "^3.2.0",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -100,6 +96,7 @@
     "istanbul": "^0.4.3",
     "jsdom": "^8.4.0",
     "livereactload": "^2.2.4",
+    "merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
@@ -109,6 +106,6 @@
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.3",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
