--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ericcastoldi/safie",
   "dependencies": {
+    "axios": "^0.11.1",
     "babel": "^6.5.2",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.0",
@@ -26,12 +27,15 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
+    "babelify": "^7.2.0",
+    "body-parser": "^1.15.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.0.1",
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
@@ -48,25 +52,22 @@
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
-    "react-addons-test-utils": "^15.0.1",
-    "react-proxy": "^1.1.8",
-    "reactify": "^1.1.1",
-    "run-sequence": "^1.1.5",
-    "sinon": "^1.17.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
-    "axios": "^0.11.1",
-    "babelify": "^7.2.0",
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
     "react": "^15.0.1",
+    "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-proxy": "^1.1.8",
     "react-router": "^2.6.0",
+    "reactify": "^1.1.1",
     "redux": "^3.5.2",
     "redux-devtools": "^3.2.0",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3",
+    "skeleton-css": "^2.0.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
