--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "istanbul": "^0.4.3",
     "jsdom": "^8.4.0",
     "livereactload": "^2.2.4",
+	"merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
