--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
+	"envify": "^3.4.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
@@ -42,7 +43,6 @@
     "gulp-istanbul": "^0.10.4",
     "gulp-jsx-coverage": "^0.3.8",
     "gulp-mocha": "^2.2.0",
-    "gulp-nodemon": "^2.0.6",
     "gulp-run": "^1.6.12",
     "gulp-util": "^3.0.7",
     "isparta": "^4.0.0",
@@ -91,7 +91,6 @@
     "gulp-istanbul": "^0.10.4",
     "gulp-jsx-coverage": "^0.3.8",
     "gulp-mocha": "^2.2.0",
-    "gulp-nodemon": "^2.0.6",
     "gulp-run": "^1.6.12",
     "gulp-util": "^3.0.7",
     "isparta": "^4.0.0",
