--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
-	"envify": "^3.4.1",
+    "envify": "^3.4.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
+    "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
@@ -49,7 +50,7 @@
     "istanbul": "^0.4.3",
     "jsdom": "^8.4.0",
     "livereactload": "^2.2.4",
-	"merge-stream": "^1.0.0",
+    "merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
