--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-proxy": "^1.1.8",
+    "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
+    "react-router-redux": "^4.0.5",
     "reactify": "^1.1.1",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-devtools": "^3.2.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
