--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
     "envify": "^3.4.1",
+    "enzyme": "^2.4.1",
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
