--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "postinstall": "gulp deploy",
-    "test": "gulp test"
+    "test": "gulp test",
+    "transpile": "browserify -e src/store/components/App.jsx -t [babelify envify] -o public/store/application.js"
   },
   "repository": {
     "type": "git",
@@ -76,13 +77,14 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.14.0",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
-    "browserify": "^13.0.0",
+    "browserify": "^13.1.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
