--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Portal de e-commerce para venda de coleções de peças de vestuário feminino feitas sob medida para as clientes do site.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "postinstall": "gulp deploy",
+    "prestart": "gulp deploy",
+    "start": "npm run viewinbrowser && node app.js",
+    "viewinbrowser": "opener http://localhost:8080/produtos",
+    "prerefreshstatics": "npm run clean",
+    "refreshstatics": "npm run copystatic",
+    "postrefreshstatics": "npm run transpile",
+    "clean": "rimraf public",
+    "copystatic": "copyfiles -u 2 ./src/store/static/* ./public/store/",
+    "postinstall": "npm run refreshstatics && npm run transpile",
     "test": "gulp test",
-    "transpile": "browserify -e src/store/components/App.jsx -t [babelify envify] -o public/store/application.js"
+    "transpile": "browserify -t [ babelify --presets [ react ] ] src/store/components/App.jsx -o public/store/application.js"
   },
   "repository": {
     "type": "git",
@@ -86,6 +93,7 @@
     "babel-register": "^6.7.2",
     "browserify": "^13.1.0",
     "chai": "^3.5.0",
+    "copyfiles": "^1.0.0",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
     "envify": "^3.4.1",
@@ -107,9 +115,11 @@
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
+    "opener": "^1.4.2",
     "react-addons-test-utils": "^15.0.1",
     "react-proxy": "^1.1.8",
     "reactify": "^1.1.1",
+    "rimraf": "^2.5.4",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.3",
     "vinyl-buffer": "^1.0.0",
