--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "launch": "npm run viewinbrowser && node app.js",
     "postinstall": "gulp deploy",
     "start": "node app.js",
-    "viewinbrowser": "opener http://localhost:8080/customer",
+    "viewinbrowser": "opener http://localhost:3000/customer",
     "prerefreshstatics": "npm run clean",
     "refreshstatics": "npm run copystatic",
     "postrefreshstatics": "npm run transpile",
@@ -56,6 +56,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-run": "^1.6.12",
     "gulp-util": "^3.0.7",
+    "helmet": "^3.1.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.3",
     "jsdom": "^8.4.0",
