--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "^1.15.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "connect-mongodb": "^1.1.5",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
     "envify": "^3.4.1",
@@ -47,6 +48,7 @@
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
+    "express-session": "^1.14.2",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -66,6 +68,9 @@
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
     "mongodb": "^2.2.11",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
