--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
     "babelify": "^7.2.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
