Início da implementação da autenticação de usuários

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "launch": "npm run viewinbrowser && node app.js",
     "postinstall": "gulp deploy",
     "start": "node app.js",
-    "viewinbrowser": "opener http://localhost:3000/customer",
+    "viewinbrowser": "opener http://localhost:3000/login",
     "prerefreshstatics": "npm run clean",
     "refreshstatics": "npm run copystatic",
     "postrefreshstatics": "npm run transpile",
@@ -42,6 +42,7 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "connect-mongodb": "^1.1.5",
+    "cookie-parser": "^1.4.3",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
     "envify": "^3.4.1",
@@ -65,10 +66,13 @@
     "jsdom": "^8.4.0",
     "livereactload": "^2.2.4",
     "merge-stream": "^1.0.0",
+    "method-override": "^2.3.7",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.2.1",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.6.8",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
@@ -85,6 +89,7 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "run-sequence": "^1.1.5",
+    "serve-favicon": "^2.3.2",
     "sinon": "^1.17.3",
     "skeleton-css": "^2.0.4",
     "vinyl-buffer": "^1.0.0",
