--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.15.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "connect-mongo": "^1.3.2",
     "connect-mongodb": "^1.1.5",
     "cookie-parser": "^1.4.3",
     "coveralls": "^2.11.9",
