--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.0",
+    "babel-loader": "^6.2.9",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
