--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "prelaunch": "gulp deploy",
-    "launch": "npm run viewinbrowser && node app.js",
+    "launch": "npm run viewinbrowser && node --inspect app.js",
     "postinstall": "gulp deploy",
     "start": "node app.js",
     "viewinbrowser": "opener http://localhost:3000/login",
