--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-router-redux": "^4.0.5",
     "reactify": "^1.1.1",
     "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.9.0",
     "redux-devtools": "^3.2.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
