--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Portal de e-commerce para venda de coleções de peças de vestuário feminino feitas sob medida para as clientes do site.",
     "main": "app.js",
     "scripts": {
+        "mongo": "service mongod start",
         "prelaunch": "gulp deploy",
         "launch": "node --inspect app.js && npm run viewinbrowser",
         "postinstall": "gulp deploy",
