Pesquisa de endereço por CEP e ajustes no form de endereços

--- a/package.json
+++ b/package.json
@@ -1,146 +1,148 @@
 {
-    "name": "safie",
-    "version": "1.0.0",
-    "description": "Portal de e-commerce para venda de coleções de peças de vestuário feminino feitas sob medida para as clientes do site.",
-    "main": "app.js",
-    "scripts": {
-        "mongo": "service mongod start",
-        "prelaunch": "gulp deploy",
-        "launch": "node --inspect app.js && npm run viewinbrowser",
-        "postinstall": "gulp deploy",
-        "start": "node app.js",
-        "viewinbrowser": "opener http://localhost:3000/login",
-        "prerefreshstatics": "npm run clean",
-        "refreshstatics": "npm run copystatic",
-        "postrefreshstatics": "npm run transpile",
-        "clean": "rimraf public",
-        "copystatic": "copyfiles -u 2 ./src/store/static/* ./public/store/",
-        "test": "gulp test",
-        "transpile": "browserify -t [ babelify --presets [ react ] ] src/store/components/App.jsx -o public/store/application.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/ericcastoldi/safie.git"
-    },
-    "author": "Eric Castoldi",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/ericcastoldi/safie/issues"
-    },
-    "homepage": "https://github.com/ericcastoldi/safie",
-    "dependencies": {
-        "axios": "^0.11.1",
-        "babel": "^6.5.2",
-        "babel-core": "^6.7.7",
-        "babel-eslint": "^6.1.0",
-        "babel-loader": "^6.2.9",
-        "babel-plugin-react-transform": "^2.0.2",
-        "babel-preset-es2015": "^6.9.0",
-        "babel-preset-react": "^6.5.0",
-        "babel-register": "^6.7.2",
-        "babelify": "^7.2.0",
-        "bcryptjs": "^2.3.0",
-        "body-parser": "^1.15.0",
-        "browserify": "^13.0.0",
-        "chai": "^3.5.0",
-        "connect-mongo": "^1.3.2",
-        "connect-mongodb": "^1.1.5",
-        "cookie-parser": "^1.4.3",
-        "coveralls": "^2.11.9",
-        "del": "^2.2.0",
-        "envify": "^3.4.1",
-        "enzyme": "^2.4.1",
-        "eslint": "^2.13.1",
-        "eslint-plugin-react": "^5.0.1",
-        "express": "^4.13.4",
-        "express-session": "^1.14.2",
-        "font-awesome": "^4.6.3",
-        "gulp": "^3.9.1",
-        "gulp-babel": "^6.1.2",
-        "gulp-eslint": "^2.0.0",
-        "gulp-istanbul": "^0.10.4",
-        "gulp-jsx-coverage": "^0.3.8",
-        "gulp-mocha": "^2.2.0",
-        "gulp-run": "^1.6.12",
-        "gulp-util": "^3.0.7",
-        "helmet": "^3.1.0",
-        "isparta": "^4.0.0",
-        "istanbul": "^0.4.3",
-        "jsdom": "^8.4.0",
-        "livereactload": "^2.2.4",
-        "merge-stream": "^1.0.0",
-        "method-override": "^2.3.7",
-        "mocha": "^2.4.5",
-        "mocha-lcov-reporter": "^1.2.0",
-        "mock-require": "^1.2.1",
-        "mongodb": "^2.2.11",
-        "mongoose": "^4.6.8",
-        "morgan": "^1.7.0",
-        "passport": "^0.3.2",
-        "passport-facebook": "^2.1.1",
-        "passport-local": "^1.0.0",
-        "react": "^15.0.1",
-        "react-addons-test-utils": "^15.0.1",
-        "react-dom": "^15.0.1",
-        "react-proxy": "^1.1.8",
-        "react-redux": "^4.4.5",
-        "react-router": "^2.6.0",
-        "react-router-redux": "^4.0.5",
-        "reactify": "^1.1.1",
-        "redux": "^3.6.0",
-        "redux-auth-wrapper": "^0.9.0",
-        "redux-devtools": "^3.2.0",
-        "redux-logger": "^2.6.1",
-        "redux-thunk": "^2.1.0",
-        "run-sequence": "^1.1.5",
-        "serve-favicon": "^2.3.2",
-        "sinon": "^1.17.3",
-        "skeleton-css": "^2.0.4",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-source-stream": "^1.1.0",
-        "watchify": "^3.7.0"
-    },
-    "devDependencies": {
-        "babel": "^6.5.2",
-        "babel-cli": "^6.14.0",
-        "babel-core": "^6.7.7",
-        "babel-eslint": "^6.1.0",
-        "babel-plugin-react-transform": "^2.0.2",
-        "babel-preset-es2015": "^6.9.0",
-        "babel-preset-react": "^6.5.0",
-        "babel-register": "^6.7.2",
-        "browserify": "^13.1.0",
-        "chai": "^3.5.0",
-        "copyfiles": "^1.0.0",
-        "coveralls": "^2.11.9",
-        "del": "^2.2.0",
-        "envify": "^3.4.1",
-        "eslint": "^2.13.1",
-        "eslint-plugin-react": "^5.0.1",
-        "gulp": "^3.9.1",
-        "gulp-babel": "^6.1.2",
-        "gulp-eslint": "^2.0.0",
-        "gulp-istanbul": "^0.10.4",
-        "gulp-jsx-coverage": "^0.3.8",
-        "gulp-mocha": "^2.2.0",
-        "gulp-run": "^1.6.12",
-        "gulp-util": "^3.0.7",
-        "isparta": "^4.0.0",
-        "istanbul": "^0.4.3",
-        "jsdom": "^8.4.0",
-        "livereactload": "^2.2.4",
-        "merge-stream": "^1.0.0",
-        "mocha": "^2.4.5",
-        "mocha-lcov-reporter": "^1.2.0",
-        "mock-require": "^1.2.1",
-        "opener": "^1.4.2",
-        "react-addons-test-utils": "^15.0.1",
-        "react-proxy": "^1.1.8",
-        "reactify": "^1.1.1",
-        "rimraf": "^2.5.4",
-        "run-sequence": "^1.1.5",
-        "sinon": "^1.17.3",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-source-stream": "^1.1.0"
-    }
+  "name": "safie",
+  "version": "1.0.0",
+  "description": "Portal de e-commerce para venda de coleções de peças de vestuário feminino feitas sob medida para as clientes do site.",
+  "main": "app.js",
+  "scripts": {
+    "mongo": "service mongod start",
+    "prelaunch": "gulp deploy",
+    "launch": "node --inspect app.js && npm run viewinbrowser",
+    "postinstall": "gulp deploy",
+    "start": "node app.js",
+    "viewinbrowser": "opener http://localhost:3000/login",
+    "prerefreshstatics": "npm run clean",
+    "refreshstatics": "npm run copystatic",
+    "postrefreshstatics": "npm run transpile",
+    "clean": "rimraf public",
+    "copystatic": "copyfiles -u 2 ./src/store/static/* ./public/store/",
+    "test": "gulp test",
+    "transpile": "browserify -t [ babelify --presets [ react ] ] src/store/components/App.jsx -o public/store/application.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ericcastoldi/safie.git"
+  },
+  "author": "Eric Castoldi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ericcastoldi/safie/issues"
+  },
+  "homepage": "https://github.com/ericcastoldi/safie",
+  "dependencies": {
+    "axios": "^0.11.1",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.0",
+    "babel-loader": "^6.2.9",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "babelify": "^7.2.0",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.0",
+    "browserify": "^13.0.0",
+    "chai": "^3.5.0",
+    "connect-mongo": "^1.3.2",
+    "connect-mongodb": "^1.1.5",
+    "cookie-parser": "^1.4.3",
+    "correios": "0.0.4",
+    "coveralls": "^2.11.9",
+    "del": "^2.2.0",
+    "envify": "^3.4.1",
+    "enzyme": "^2.4.1",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.0.1",
+    "express": "^4.13.4",
+    "express-session": "^1.14.2",
+    "font-awesome": "^4.6.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-jsx-coverage": "^0.3.8",
+    "gulp-mocha": "^2.2.0",
+    "gulp-run": "^1.6.12",
+    "gulp-util": "^3.0.7",
+    "helmet": "^3.1.0",
+    "io-cep": "^2.2.1",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.3",
+    "jsdom": "^8.4.0",
+    "livereactload": "^2.2.4",
+    "merge-stream": "^1.0.0",
+    "method-override": "^2.3.7",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mock-require": "^1.2.1",
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.6.8",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
+    "react": "^15.0.1",
+    "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-proxy": "^1.1.8",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-router-redux": "^4.0.5",
+    "reactify": "^1.1.1",
+    "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.9.0",
+    "redux-devtools": "^3.2.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
+    "run-sequence": "^1.1.5",
+    "serve-favicon": "^2.3.2",
+    "sinon": "^1.17.3",
+    "skeleton-css": "^2.0.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "browserify": "^13.1.0",
+    "chai": "^3.5.0",
+    "copyfiles": "^1.0.0",
+    "coveralls": "^2.11.9",
+    "del": "^2.2.0",
+    "envify": "^3.4.1",
+    "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-jsx-coverage": "^0.3.8",
+    "gulp-mocha": "^2.2.0",
+    "gulp-run": "^1.6.12",
+    "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.3",
+    "jsdom": "^8.4.0",
+    "livereactload": "^2.2.4",
+    "merge-stream": "^1.0.0",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mock-require": "^1.2.1",
+    "opener": "^1.4.2",
+    "react-addons-test-utils": "^15.0.1",
+    "react-proxy": "^1.1.8",
+    "reactify": "^1.1.1",
+    "rimraf": "^2.5.4",
+    "run-sequence": "^1.1.5",
+    "sinon": "^1.17.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
